--- a/dev/assets/index.pug
+++ b/dev/assets/index.pug
@@ -9,12 +9,14 @@ block content
 			.display-type.jb-cascade(data-cascade="scale-small" data-cascade-delay-mobile="0" data-cascade-delay="0")
 				h2.display-w w
 				h2.display-e e
-			.title-wrapper.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="4" data-cascade-delay="4")
-				.span-container
+			.title-wrapper
+				.span-container.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="3" data-cascade-delay="3")
 					span create
 					span &
 					span consult
-			p.about-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="5" data-cascade-delay="5") We <br> create and consult for lifestyle cultures and industries such as fashion, hospitality, entertainment and more. 
+					//- span.separator-line.jb-cascade(data-cascade="line-full" data-cascade-delay-mobile="4" data-cascade-delay="4")
+					//- 	.line
+			p.about-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="4" data-cascade-delay="4") We <br> create and consult for lifestyle cultures and industries such as fashion, hospitality, entertainment and more. 
 	//- para caundo se quiere regresar. la pagina anterior
 	//- a(href="javascript:history.back()")
 	a.btn-wrapper.btn-pages(href="ourwork.html")
