--- a/dev/assets/ourwork.pug
+++ b/dev/assets/ourwork.pug
@@ -13,7 +13,7 @@ block content
 					+project-intro("workstrategy.html", "02","Campaign"," & Social Media Strategy","See case studies", "See case", {textDelay: 2, arrowDelay: 3} )
 					+project-intro("workmanagement.html","03","Content Creation"," & Management", "See case studies", "See case", {textDelay: 3, arrowDelay: 4})
 					+project-intro("workevent.html","04","Event Curation","", "See case studies","See Case",{textDelay: 4, arrowDelay: 5})
-	a.btn-wrapper.btn-pages(href="javascript:history.back()")
+	a.btn-wrapper.btn-pages(href="index.html)
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+close-icon
 block footer
