--- a/dev/assets/project-event-puma.pug
+++ b/dev/assets/project-event-puma.pug
@@ -6,26 +6,18 @@ block content
 		.row
 			section.project-about
 				+hero-project("Event Curation","Puma","01")
-				//- .background-wrapper.p-about-bg
-				//- .info-wrapper.snj-col-10.offset-1.snj-col-md-4.offset-md-4
-				//- 	h2.subtitle-block Event Curation
-				//- 	h1.project-title Puma
-				//- 	span 01
-				//- aside.especifications.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-				//- 	.snj-row
-				//- 		div.especific-item.snj-col-md-2
-				//- 			h4 Cliente
-				//- 			h5 Puma						
-				//- 		div.especific-item.offset-md-2.snj-col-md-4
-				//- 			h4 Project
-				//- 			h5 Social brand building
-				//- 		div.especific-item.snj-col-md-2.offset-md-2
-				//- 			h4 Year
-				//- 			h5 2017
+				aside.especifications.snj-col-10.offset-1.snj-col-md-6.offset-md-3
+					.snj-row
+						div.especific-item.snj-col-md-2
+							+project-box("Client", "Puma")
+						div.especific-item.offset-md-2.snj-col-md-4
+							+project-box("Project", "Social brand building",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
+						div.especific-item.snj-col-md-2.offset-md-2
+							+project-box("Year", "2017",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-					h1.project-title Puma
-					div.paragraph-left
+					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Puma
+					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p Curating an event that looks great, and feels great in terms of vibes, is a big enough challenge. We make it harder on ourselves by trying to also make the event unprecedented in some sort of way. 
 						p Thankfully, PUMA has always shared our tenacity to make this happen, from creating secret entrances to capturing the beautiful diversity of women in Dubai like never before. 
 
@@ -65,7 +57,7 @@ block content
 							+icon-arrow
 				p.copyright © Copyright 2019
 	a.btn-wrapper.btn-pages(href="workevent.html")
-		span.btn-animate-up
+		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
 	+footer('scroll')
