--- a/dev/assets/project-social-power.pug
+++ b/dev/assets/project-social-power.pug
@@ -7,28 +7,22 @@ block content
 		.row
 			section.project-about
 				//- .background-wrapper.p-about-bg
-				.info-wrapper.snj-col-10.offset-1.snj-col-md-4.offset-md-4
-					h2.subtitle-block Campaign & Social Media Strategy
-					h1.project-title Power Horse
-					span 02
+				+hero-project("Campaign & Social Media Strategy","Power Horse", "02")
 				aside.especifications.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					.snj-row
 						div.especific-item.snj-col-md-2
-							h4 Cliente
-							h5 Puma						
+							+project-box("Client", "Puma	")
 						div.especific-item.offset-md-2.snj-col-md-4
-							h4 Project
-							h5 Social brand building
+							+project-box("Project", "Social brand building",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
 						div.especific-item.snj-col-md-2.offset-md-2
-							h4 Year
-							h5 2017
+							+project-box("Year", "2017",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-					h1.project-title Power Horse
-					div.paragraph-left
+					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Power Horse
+					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p When Power Horse was ready to distinguish itself from competitors and focus heavily on the pervading lifestyle cultures and movements of the day (namely street culture), we connected the brand with artists and creatives in the community that truly espoused the brand’s “Unstoppable You” spirit. Not the easiest job for a brand that virtually had no reputation with this community.
 						p But we know it’s always about “show and prove” so we made sure that our initial collaborations were about actually helping artists/athletes in the  
-					div.paragraph-right
+					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p community clearly get to the next level, whether it was providing the resources (and narrative) to have their booth come to life at Sole DXB, from helping them tick something off their creative bucket list. Once their intention and place in the community was set, we then moved on to establishing a new design language and tone of voice. 
 						p So while their competitors went extreme, we went more creative (even artsy). When competitors went mainstream, we went underground. 
 			.p-photo1
@@ -68,7 +62,7 @@ block content
 							+icon-arrow
 				p.copyright © Copyright 2019
 	a.btn-wrapper.btn-pages(href="workstrategy.html")
-		span.btn-animate-up
+		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
 	+footer('scroll')
