--- a/dev/assets/project-manage-cova.pug
+++ b/dev/assets/project-manage-cova.pug
@@ -6,25 +6,19 @@ block content
 		.row
 			section.project-about
 				//- .background-wrapper.p-about-bg
-				.info-wrapper.snj-col-10.offset-1.snj-col-md-4.offset-md-4
-					h2.subtitle-block Creation & Management
-					h1.project-title Cova
-					span 04
+				+hero-project("Creation & Management","Cova", "04")
 				aside.especifications.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					.snj-row
 						div.especific-item.snj-col-md-2
-							h4 Cliente
-							h5 Puma						
+							+project-box("Client", "Puma")
 						div.especific-item.offset-md-2.snj-col-md-4
-							h4 Project
-							h5 Social brand building
+							+project-box("Project", "Social brand building",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
 						div.especific-item.snj-col-md-2.offset-md-2
-							h4 Year
-							h5 2017
+							+project-box("Year", "2017",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-					h1.project-title Cova
-					div.paragraph-left
+					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Cova
+					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p A vibrant restaurant, with astonishingly great food, deserves food content that is just as mouth watering. Yet, the beauty of Coya’s dishes and drinks is that the ingredients and prep that goes into them are just as impressive. So capturing the process, and finished product, were a must. 
 
 			.p-photo1
@@ -63,7 +57,7 @@ block content
 							+icon-arrow
 				p.copyright © Copyright 2019
 	a.btn-wrapper.btn-pages(href="workmanagement.html")
-		span.btn-animate-up
+		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
 	+footer('scroll')
