--- a/dev/assets/project-manage-irisin.pug
+++ b/dev/assets/project-manage-irisin.pug
@@ -6,28 +6,22 @@ block content
 		.row
 			section.project-about
 				//- .background-wrapper.p-about-bg
-				.info-wrapper.snj-col-10.offset-1.snj-col-md-4.offset-md-4
-					h2.subtitle-block Creation & Management
-					h1.project-title Irisin
-					span 03
+				+hero-project("Creation & Management","Irisin", "03")
 				aside.especifications.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					.snj-row
 						div.especific-item.snj-col-md-2
-							h4 Cliente
-							h5 Puma						
+							+project-box("Client", "Puma")
 						div.especific-item.offset-md-2.snj-col-md-4
-							h4 Project
-							h5 Social brand building
+							+project-box("Project", "Social brand building",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
 						div.especific-item.snj-col-md-2.offset-md-2
-							h4 Year
-							h5 2017
+							+project-box("Year", "2017",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-					h1.project-title Irisin
-					div.paragraph-left
+					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Irisin
+					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p One of our main goals is to help clients set the content standard for their respective industry/region. 
 						p This goal was more crucial than ever with a gym like Irisin Fujairah as they definitely set the standards for gyms throughout the Middle East. 
-					div.pragraph-right
+					div.pragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p In turn, we helped shape their launch video, shot by an overseas Director, and then produced photo content that matched the high quality and dynamic nature of the gym. 
 
 			.p-photo1
@@ -67,7 +61,7 @@ block content
 							+icon-arrow
 				p.copyright © Copyright 2019
 	a.btn-wrapper.btn-pages(href="workmanagement.html")
-		span.btn-animate-up
+		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
 	+footer('scroll')
