--- a/dev/assets/project-social-suede.pug
+++ b/dev/assets/project-social-suede.pug
@@ -7,28 +7,22 @@ block content
 		.row
 			section.project-about
 				//- .background-wrapper.p-about-bg
-				.info-wrapper.snj-col-10.offset-1.snj-col-md-4.offset-md-4
-					h2.subtitle-block Campaign & Social Media Strategy
-					h1.project-title Suede Guerrilla
-					span 01
+				+hero-project("Campaign & Social Media Strategy","Suede Guerrilla", "01")
 				aside.especifications.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					.snj-row
 						div.especific-item.snj-col-md-2
-							h4 Cliente
-							h5 Puma						
+							+project-box("Client", "Puma")
 						div.especific-item.offset-md-2.snj-col-md-4
-							h4 Project
-							h5 Social brand building
+							+project-box("Project", "Social brand building",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
 						div.especific-item.snj-col-md-2.offset-md-2
-							h4 Year
-							h5 2017
+							+project-box("Year", "2017",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-					h1.project-title Suede Guerrilla
-					div.paragraph-left
+					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Suede Guerrilla
+					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p For PUMA’s Run the Streets campaign, we created the Suede Guerrillas, a group of artists and creatives from different walks of life that authentically embodied the campaign’s ethos. 
 						p It was the first long-term micro influencer campaign to exist in the region, and produced and unprecedented amount of original content and activations - a sort of digital interpretation of running the streets. In Year 2, the Suede Guerrillas evolved into a regional platform for co-creation anchored by its site, <a (href="")>suedeguerrillas.com</a>, which we also designed.
-					div.paragraph-right
+					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p  We’re especially proud of the platform because it’s exactly the type of thing that wasn’t available to use as young, ambitious creatives. 
 						p Now an entire region of artists/creatives have a way to continually share ideas and work with the brand. It’s already led to dozens of co-creations and will continue to do so while the site is live. It’s the type of access and opportunity our younger selves dreamed of, and we’re proud to pay it forward to this generation and beyond.  
 
@@ -69,7 +63,7 @@ block content
 							+icon-arrow
 				p.copyright © Copyright 2019
 	a.btn-wrapper.btn-pages(href="workstrategy.html")
-		span.btn-animate-up
+		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
 	+footer("scroll")
