--- a/dev/scss/global/_keyframes.scss
+++ b/dev/scss/global/_keyframes.scss
@@ -51,6 +51,10 @@
 	0%{width: 0%;opacity: 0;}
 	100%{width: 50%; opacity: 1;}
 }
+@-webkit-keyframes line-full-height{
+	0%{height: 0%;opacity: 0;}
+	100%{height: 100%; opacity: 1;}
+}
 
 // right box translate
 @-webkit-keyframes translate-right {
