--- a/dev/scss/views/_message.scss
+++ b/dev/scss/views/_message.scss
@@ -15,14 +15,14 @@
 		position: relative;
 		line-height: 16px;
 		height: 14px;
-		&:after{
-			content: "";
-			position: absolute;
-			bottom: -22px;left: 0;
-			width: 100%;
-			height: 22px;
-			background-color: green;
-		}
+		// &:after{
+		// 	content: "";
+		// 	position: absolute;
+		// 	bottom: -22px;left: 0;
+		// 	width: 100%;
+		// 	height: 22px;
+		// 	background-color: green;
+		// }
 	}
 }
 // inputs
@@ -68,12 +68,13 @@
 				font-size: 12px;
 				@include transitions-ease(.4s);
 				&.placeholder{
-					pointer-events: none;
+					// pointer-events: none;
 					position: absolute;
 					left: 0px;
 					top: 50%;
 					transform: translateY(-50%);
 					opacity: 1;
+					animation-duration: 1000ms;
 					&.active{
 						opacity: 0
 					}
@@ -110,7 +111,7 @@
 				color: $cream;
 			}
 			span.bar{
-				width: 0;
+				width: 100%;
 				height: 2px;
 				background-color: $cream;
 				display: block;
