--- a/dev/scss/views/_thanks.scss
+++ b/dev/scss/views/_thanks.scss
@@ -18,28 +18,28 @@
 		position: relative;
 		letter-spacing: 0.018em;
 		// mob
-		&:after{
-			content: "";
-			position: absolute;
-			left: 0;bottom: -20px;
-			width: 100%;
-			height: 20px;
-			background-color: green;
-		}
+		// &:after{
+		// 	content: "";
+		// 	position: absolute;
+		// 	left: 0;bottom: -20px;
+		// 	width: 100%;
+		// 	height: 20px;
+		// 	background-color: green;
+		// }
 		@media(min-width: 768px){
 			line-height: 44px;
 			height: 40px;
 			margin-bottom: 12px;
 			margin-top: 8px;
 			letter-spacing: .02em;
-			&:after{
-				content: "";
-				position: absolute;
-				left: 0;bottom: -20px;
-				width: 100%;
-				height: 20px;
-				background-color: green;
-			}
+			// &:after{
+			// 	content: "";
+			// 	position: absolute;
+			// 	left: 0;bottom: -20px;
+			// 	width: 100%;
+			// 	height: 20px;
+			// 	background-color: green;
+			// }
 		}
 	}
 	p{
@@ -63,15 +63,15 @@
 			padding-left: 16.6667%;
 			margin-bottom: 15px;
 			// desk
-			&:after{
-				content: "";
-				position: absolute;
-				left: 0;
-				bottom: -15px;
-				width: 100%;
-				height: 28px;
-				background-color: green;
-			}
+			// &:after{
+			// 	content: "";
+			// 	position: absolute;
+			// 	left: 0;
+			// 	bottom: -15px;
+			// 	width: 100%;
+			// 	height: 28px;
+			// 	background-color: green;
+			// }
 		}
 	}
 	.social-wrapper{
