cambios de antes

--- a/dev/scss/app.scss
+++ b/dev/scss/app.scss
@@ -34,16 +34,16 @@
 @import 'modules/_preloader';
 
 .img-tester{
-	opacity: 0;
-
+	opacity: .4;
 	pointer-events: none;
-	z-index: 1;
+	z-index: 99;
 	position: absolute;
 	top: 0; left: 0;
 	width: 100%;
 	height: 100%;
-
 	img{
 		width: 100%;
+		height: 100%;
+		display: block;
 	}
 }
