--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -35,7 +35,25 @@ html(class='no-js')
 
 		//- tester
 		.img-tester
+			//- desktop
 			img(src="img/home_desk.jpg", alt="")
+			//- img(src="img/ourWork_desk.jpg", alt="")
+			//- img(src="img/worSections_desk.jpg", alt="")
+			//- img(src="img/project_desk.jpg", alt="")
+			//- img(src="img/about_desk.jpg", alt="")
+			//- img(src="img/contact_desk.jpg", alt="")
+			//- img(src="img/message_desk.jpg", alt="")
+			//- img(src="img/thanks_desk.jpg", alt="")
+			
+			//- mobile
+			//- img(src="img/home_mob.jpg", alt="")
+			//- img(src="img/ourWork_mob.jpg", alt="")
+			//- img(src="img/worSections_mob.jpg", alt="")
+			//- img(src="img/project_mob.jpg", alt="")
+			//- img(src="img/about_mob.jpg", alt="")
+			//- img(src="img/contact_mob.jpg", alt="")
+			//- img(src="img/message_mob.jpg", alt="")
+			//- img(src="img/thanks_mob.jpg", alt="")
 		
 		//- content
 		#main-wrapper
